--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,46 +1,8 @@
-<<<<<<< HEAD
-name: Deploy Vue App
-
-on:
-  push:
-    branches:
-      - main   # Deploy every push to main
-
-permissions:
-  contents: write
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build project
-        run: npm run build
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist     # Vue builds here
-=======
 name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ feature/settings ]
-  pull_request:
-    branches: [ feature/settings ]
+    branches: [ main ]
 
 jobs:
   build-and-deploy:
@@ -68,10 +30,12 @@ jobs:
     - name: Build
       run: npm run build-only
 
+    - name: Create .nojekyll
+      run: touch ./dist/.nojekyll
+
     - name: Deploy to GitHub Pages
-      if: github.ref == 'refs/heads/feature/settings'
-      uses: peaceiris/actions-gh-pages@v4
+      uses: JamesIves/github-pages-deploy-action@v4
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./dist
->>>>>>> feature/settings
+        folder: dist
+        token: ${{ secrets.GITHUB_TOKEN }}
+        single-commit: true
