--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,9 +33,16 @@ jobs:
     - name: Create .nojekyll
       run: touch ./dist/.nojekyll
 
+    - name: Copy 404.html for SPA routing
+      run: cp 404.html ./dist/
+
+    - name: Move dist to docs folder
+      run: |
+        rm -rf docs
+        mv dist docs
+
     - name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@v4
+      uses: peaceiris/actions-gh-pages@v3
       with:
-        folder: dist
-        token: ${{ secrets.GITHUB_TOKEN }}
-        single-commit: true
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./docs
